security.tf
resource "aws_security_group" "nios_sg" {
  name        = "${var.name_prefix}-nios-sg"
  description = "Allow Traffic for NIOS"
  vpc_id      = var.create_networking ? aws_vpc.nios[0].id : var.custom_vpc_id

  ingress {
    description = "SSH from Internet"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }
  ingress {
    description = "HTTPS from Internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }
  ingress {
    description = "DNS TCP"
    from_port   = 53
    to_port     = 53
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }
  ingress {
    description = "DNS UDP"
    from_port   = 53
    to_port     = 53
    protocol    = "udp"
    cidr_blocks = var.allowed_cidr_blocks
  }
  ingress {
    description = "ICMP to NIOS"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = var.allowed_cidr_blocks
  }

  # Traffic allowed in from other grid members
  ingress {
    description = "NIOS Grid traffic"
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = var.grid_cidr_blocks
  }
  ingress {
    description = "NIOS Grid traffic 2"
    from_port   = 2114
    to_port     = 2114
    protocol    = "udp"
    cidr_blocks = var.grid_cidr_blocks
  }
  ingress {
    description = "Infoblox AWS API Proxy"
    from_port   = 8787
    to_port     = 8787
    protocol    = "tcp"
    cidr_blocks = var.grid_cidr_blocks
  }

  egress {
    description = "Allow traffic from VPC"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = var.allowed_egress_cidr_blocks
  }

  tags = merge({
    Name = "${var.name_prefix}-nios-sg"
  }, var.custom_tags)
}
